<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_back">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"
        android:background="#0000">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email 등록"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:background="#0000"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="아래에 있는 탭을 올려 수신자를 추가해주세요"
            android:textSize="15dp"
            android:textColor="@color/primary_text"
            android:gravity="center"
            android:layout_centerInParent="true"/>

        <View
            android:background="#BDBDBD"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="1dp"

            android:layout_below="@+id/textView1" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_below="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </ListView>
        </LinearLayout>

    </RelativeLayout>

    <TableLayout
        android:id="@+id/btn_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFDDDDDD"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:behavior_hideable="false"
        android:stretchColumns="*"
        android:focusable="false"
        android:focusableInTouchMode="true">

        <TableRow>

            <ImageView
                android:src="@drawable/ic_tap_email"
                android:layout_gravity="center"
                android:layout_span="2"
                android:layout_height="50dp"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:textColor="@color/primary_text"
                android:text="병원 이름 "
                android:layout_span="2"
                android:layout_gravity="center"
                />
        </TableRow>
        <TableRow>
            <EditText
                android:textColor="@color/secondary_text"
                android:id = "@+id/name_hospital"
                android:hint="병원 이름을 입력해주세요"
                android:layout_span="2"
                android:layout_marginTop="@dimen/table_margin"
                android:background="#FFFFFF"/>
        </TableRow>

        <TableRow>
            <TextView
                android:textColor="@color/primary_text"
                android:text="담당 의사"
                android:layout_span="2"
                android:layout_gravity="center"
                />
        </TableRow>
        <TableRow>
            <EditText
                android:textColor="@color/secondary_text"
                android:id = "@+id/name_doctor"
                android:hint="의사 이름을 입력해주세요"
                android:layout_span="2"
                android:layout_marginTop="@dimen/table_margin"
                android:background="#FFFFFF"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:textColor="@color/primary_text"
                android:text="E-mail"
                android:layout_span="2"
                android:layout_gravity="center"
                />
        </TableRow>
        <TableRow>
            <EditText
                android:textColor="@color/secondary_text"
                android:id = "@+id/email"
                android:inputType="textEmailAddress"
                android:hint="담당의 E-mail을 입력해주세요"
                android:layout_span="2"
                android:layout_marginTop="@dimen/table_margin"
                android:background="#FFFFFF"/>
        </TableRow>

        <TableRow>
            <ImageButton
                android:id="@+id/update"
                android:background="#0000"
                android:src="@drawable/ic_enroll_email_done"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <ImageButton
                android:src="@drawable/ic_delete_email"
                android:background="#0000"
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
        </TableRow>


    </TableLayout>

</android.support.design.widget.CoordinatorLayout>