...
        android:layout_below="@+id/toolbar"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/medicine_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:backgroundTint="#7777ff"
            android:hint="@string/medicine_info_search_hint"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/medicine_search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:src="@drawable/ic_search"
            android:text="@string/search" />
    </LinearLayout>
...
