...
        android:background="#0000"
        android:orientation="vertical"
        android:layout_height="148dp">

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/reminder_title"
            android:layout_marginLeft="72dp"
            android:hint="알람 이름"
            android:textStyle="bold"
            android:textSize="25dp"
            android:lines="4"
            android:minLines="4"
...
                    android:orientation="horizontal"
                    android:layout_centerVertical="true"
                    android:background="#00ffffff"
                    android:layout_height="wrap_content">

                    <ToggleButton
                        android:id="@+id/tgbtn_mon_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background = "#ffff"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold"
...
        android:layout_below="@+id/add_reminder_layout_top" />

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/starred2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fab:fab_icon="@drawable/ic_notification_active"
        fab:fab_colorNormal="@color/accent"
        fab:fab_colorPressed="#000000"
        app:fab_size="normal"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="168dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/test"
        android:text="저장"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_alignParentRight="true"
        android:background="@drawable/background_transparent"/>

...
