...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/memo_hint"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/memo_content"/>
    </LinearLayout>

    <Button
        android:layout_alignParentRight="true"

        android:background="@drawable/background_transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/primary_text"
        android:text="@string/submit"
        android:layout_gravity="right"
        android:id="@+id/memo_upload"/>

</RelativeLayout>

