<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
</LinearLayout>
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context=".AlarmList">-->

    <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/toolbar"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_width="match_parent"-->
        <!--android:minHeight="60dp"-->
        <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
        <!--app:contentInsetLeft="0dp"-->
        <!--app:contentInsetStart="16dp"-->
        <!--app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
        <!--android:background="@color/colorPrimary"-->
        <!--/>-->
    <!--<ListView-->
        <!--android:id="@+id/list"-->
        <!--android:layout_below="@+id/toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->
    <!--</ListView>-->

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_margin="16dp"-->
        <!--android:src="@drawable/ic_add_alarms"-->
        <!--app:backgroundTint="@color/colorPrimary"-->
        <!--app:fabSize="normal"/>-->

<!--</RelativeLayout>-->